--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -112,10 +112,11 @@ h1, h2 {
   padding: 20px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
   transition: transform var(--transition-speed), box-shadow var(--transition-speed);
-  text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  max-width: 100%;
 }
 
 .temple-card:hover {
@@ -125,7 +126,7 @@ h1, h2 {
 
 .temple-card figcaption {
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   color: var(--primary-color);
   margin-bottom: 0.5rem;
 }
@@ -140,8 +141,8 @@ h1, h2 {
 .temple-card img {
   width: 100%;
   height: auto;
+  margin-top: 1rem;
   border-radius: var(--gallery-border-radius);
-  margin-top: 10px;
   opacity: 0;
   transition: opacity 0.6s ease-in-out;
 }
